--- a/css/init.css
+++ b/css/init.css
@@ -3,63 +3,72 @@
   font-style: normal;
   font-weight: 100;
   font-display: block;
-  src: url(../fonts/Montserrat-Thin.ttf) format("truetype");
+  src: url(https://static.coinversation.io/fonts/Montserrat-Thin.ttf)
+    format("truetype");
 }
 @font-face {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 200;
   font-display: block;
-  src: url(../fonts/Montserrat-ExtraLight.ttf) format("truetype");
+  src: url(https://static.coinversation.io/fonts/Montserrat-ExtraLight.ttf)
+    format("truetype");
 }
 @font-face {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 300;
   font-display: block;
-  src: url(../fonts/Montserrat-Light.ttf) format("truetype");
+  src: url(https://static.coinversation.io/fonts/Montserrat-Light.ttf)
+    format("truetype");
 }
 @font-face {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url(../fonts/Montserrat-Regular.ttf) format("truetype");
+  src: url(https://static.coinversation.io/fonts/Montserrat-Regular.ttf)
+    format("truetype");
 }
 @font-face {
   font-family: Montserrat;
   font-style: italic;
   font-weight: 400;
   font-display: block;
-  src: url(../fonts/Montserrat-Italic.ttf) format("truetype");
+  src: url(https://static.coinversation.io/fonts/Montserrat-Italic.ttf)
+    format("truetype");
 }
 @font-face {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
   font-display: block;
-  src: url(../fonts/Montserrat-Medium.ttf) format("truetype");
+  src: url(https://static.coinversation.io/fonts/Montserrat-Medium.ttf)
+    format("truetype");
 }
 @font-face {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 600;
   font-display: block;
-  src: url(../fonts/Montserrat-SemiBold.ttf) format("truetype");
+  src: url(https://static.coinversation.io/fonts/Montserrat-SemiBold.ttf)
+    format("truetype");
 }
 @font-face {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 700;
   font-display: block;
-  src: url(../fonts/Montserrat-Bold.ttf) format("truetype");
+  src: url(https://static.coinversation.io/fonts/Montserrat-Bold.ttf)
+    format("truetype");
 }
 @font-face {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 800;
   font-display: block;
-  src: url(../fonts/Montserrat-ExtraBold.ttf) format("truetype");
+  src: url(https://static.coinversation.io/fonts/Montserrat-ExtraBold.ttf)
+    format("truetype");
 }
 html,
 body,
