--- a/css/init.css
+++ b/css/init.css
@@ -117,6 +117,11 @@ blockquote,
 q {
   quotes: none;
 }
+p {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+}
 blockquote:before,
 blockquote:after,
 q:before,
