--- a/css/init.css
+++ b/css/init.css
@@ -208,3 +208,39 @@ input[type="range"]::-ms-track {
   border-color: transparent;
   color: transparent;
 }
+
+.mt60 {
+  margin-top: 60px;
+}
+.mt30 {
+  margin-top: 30px;
+}
+.mb12 {
+  margin-bottom: 12px;
+}
+
+.form .text {
+  line-height: 20px;
+}
+.form .text i {
+  color: #7347f4;
+}
+.form .required {
+  border: 1px solid #9286b5;
+  font-weight: 500;
+  font-size: 12px;
+  color: #9286b5;
+  border-radius: 4px;
+  padding: 0 6px;
+  height: 20px;
+  line-height: 18px;
+  display: inline-block;
+  margin-left: 10px;
+  vertical-align: text-bottom;
+}
+.form .border {
+  margin-top: 40px;
+  border: 1px dashed #9286b5;
+  border-radius: 8px;
+  padding: 30px;
+}
