--- a/css/init.css
+++ b/css/init.css
@@ -212,6 +212,9 @@ input[type="range"]::-ms-track {
 .mt60 {
   margin-top: 60px;
 }
+.mt40 {
+  margin-top: 30px;
+}
 .mt30 {
   margin-top: 30px;
 }
