--- a/css/init.css
+++ b/css/init.css
@@ -248,7 +248,7 @@ input[type="range"]::-ms-track {
   line-height: 18px;
   display: inline-block;
   margin-left: 10px;
-  vertical-align: text-bottom;
+  vertical-align: middle;
 }
 .form .border {
   margin-top: 40px;
