--- a/css/init.css
+++ b/css/init.css
@@ -224,6 +224,9 @@ input[type="range"]::-ms-track {
 .mb12 {
   margin-bottom: 12px;
 }
+.mb30 {
+  margin-bottom: 30px;
+}
 .h2 {
   font-size: 24px;
 }
