--- a/css/init.css
+++ b/css/init.css
@@ -113,7 +113,7 @@ article, aside, details, figcaption, figure,
 body {
   line-height: 1;
   font-size: 16px;
-  background-color: #f9f9f9;
+  background-color: #f6f7fa;
 }
 ol,
 ul {
