--- a/css/init.css
+++ b/css/init.css
@@ -219,7 +219,7 @@ input[type="range"]::-ms-track {
   margin-top: 40px;
 }
 .ml30 {
-  margin-left: 30px;
+  margin-left: 12px;
 }
 .mb12 {
   margin-bottom: 12px;
@@ -228,7 +228,7 @@ input[type="range"]::-ms-track {
   margin-bottom: 30px;
 }
 .h2 {
-  font-size: 24px;
+  font-size: 20px;
   line-height: 30px;
 }
 .h3 {
@@ -259,4 +259,12 @@ input[type="range"]::-ms-track {
   border: 1px dashed #9286b5;
   border-radius: 8px;
   padding: 30px;
+}
+@media screen and (min-width: 852px) {
+  .h2 {
+    font-size: 24px;
+  }
+  .ml30 {
+    margin-left: 30px;
+  }
 }
